Made makefile and basic index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Magnussonl's Page</title>
+    <link rel="stylesheet" href=".css/rose-pine.css" />
   </head>
   <body>
+    <h1>Hello World</h1>
+    <p>
+      Lorem ipsum odor amet, consectetuer adipiscing elit. Mollis ligula primis
+      dis montes ipsum; quis magna dictumst justo. Porttitor ultricies litora
+      metus est lacinia himenaeos porta pharetra. Viverra tincidunt sed nulla
+      leo egestas curabitur urna odio purus. Sem leo habitasse cursus elit
+      mattis fringilla. Senectus finibus faucibus congue tempus libero dolor
+      molestie taciti. Per eu dolor diam pellentesque porta; penatibus libero
+      fringilla. Aliquet vivamus interdum tempor, magna magna sodales quis.
+      Inceptos penatibus fringilla scelerisque mollis pulvinar nascetur.
+    </p>
+    <p>
+      Faucibus congue vulputate non tincidunt libero leo porta ipsum. Porta
+      habitant integer vulputate nisi mi, finibus mollis justo. Ante purus diam
+      ornare praesent metus. Morbi et egestas nulla suscipit volutpat justo
+      nullam commodo. Inceptos hac habitasse bibendum cubilia mattis. Gravida
+      condimentum netus dis sem nisi. Taciti quisque phasellus luctus pulvinar,
+      senectus class per vivamus. Tellus nascetur nisi taciti amet ex laoreet
+      iaculis.
+    </p>
+    <p>
+      Morbi faucibus justo inceptos fringilla blandit hac quisque montes.
+      Elementum tincidunt urna semper senectus; dolor metus nibh. Tortor tempor
+      velit consectetur semper porttitor amet? Fermentum nostra cubilia class
+      ultrices commodo finibus lobortis at taciti. Ridiculus ultricies
+      parturient primis non justo at. Tristique blandit auctor at scelerisque
+      faucibus eget. Porta sed enim est aenean himenaeos ullamcorper efficitur.
+    </p>
   </body>
 </html>
