Basic index.html

--- a/index.html
+++ b/index.html
@@ -8,33 +8,17 @@
     <link rel="stylesheet" href=".css/rose-pine.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Welcome to my website.</h1>
     <p>
-      Lorem ipsum odor amet, consectetuer adipiscing elit. Mollis ligula primis
-      dis montes ipsum; quis magna dictumst justo. Porttitor ultricies litora
-      metus est lacinia himenaeos porta pharetra. Viverra tincidunt sed nulla
-      leo egestas curabitur urna odio purus. Sem leo habitasse cursus elit
-      mattis fringilla. Senectus finibus faucibus congue tempus libero dolor
-      molestie taciti. Per eu dolor diam pellentesque porta; penatibus libero
-      fringilla. Aliquet vivamus interdum tempor, magna magna sodales quis.
-      Inceptos penatibus fringilla scelerisque mollis pulvinar nascetur.
+      Hey there, thanks for visiting my site. I am a computer programmer working
+      out of Washington state, primarially working on computer simulations and
+      <i>basic</i> machine learning.
     </p>
     <p>
-      Faucibus congue vulputate non tincidunt libero leo porta ipsum. Porta
-      habitant integer vulputate nisi mi, finibus mollis justo. Ante purus diam
-      ornare praesent metus. Morbi et egestas nulla suscipit volutpat justo
-      nullam commodo. Inceptos hac habitasse bibendum cubilia mattis. Gravida
-      condimentum netus dis sem nisi. Taciti quisque phasellus luctus pulvinar,
-      senectus class per vivamus. Tellus nascetur nisi taciti amet ex laoreet
-      iaculis.
-    </p>
-    <p>
-      Morbi faucibus justo inceptos fringilla blandit hac quisque montes.
-      Elementum tincidunt urna semper senectus; dolor metus nibh. Tortor tempor
-      velit consectetur semper porttitor amet? Fermentum nostra cubilia class
-      ultrices commodo finibus lobortis at taciti. Ridiculus ultricies
-      parturient primis non justo at. Tristique blandit auctor at scelerisque
-      faucibus eget. Porta sed enim est aenean himenaeos ullamcorper efficitur.
+      I am going to try to start using this website as a blog for some of my
+      hobies and projects, but we will see how it goes. Expect to see updates as
+      I look for a new bicycle, rebuild my computer, and chip away at my magnus
+      opus.
     </p>
   </body>
 </html>
