--- a/index.html
+++ b/index.html
@@ -5,20 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Magnussonl's Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href=".css/rose-pine.css" />
+    <link rel="stylesheet" href=".css/fira-code.css" />
+    <link rel="stylesheet" href=".css/style.css" />
   </head>
   <body>
+    <header>Straight from the Horse Head</header>
     <h1>Welcome to my website.</h1>
+    <div class="side-table">
+      <table>
+        <thead>
+          <th colspan="2">About Me</th>
+        </thead>
+        <tr>
+          <td>Casual Name</td>
+          <td>
+            Lucy/mani lusi/Luke<!--/I will probably answer to any name starting
+              with an 'L'-->
+          </td>
+        </tr>
+        <tr>
+          <td>Professional Name</td>
+          <td>Luke</td>
+        </tr>
+        <tr>
+          <td>Pronouns</td>
+          <td>Any/All</td>
+        </tr>
+        <tr>
+          <td>Nationality</td>
+          <td>Australian/American dual citizen</td>
+        </tr>
+      </table>
+    </div>
+
     <p>
       Hey there, thanks for visiting my site. I am a computer programmer working
       out of Washington state, primarially working on computer simulations and
-      <i>basic</i> machine learning.
+      <strong>basic</strong> machine learning.
     </p>
     <p>
       I am going to try to start using this website as a blog for some of my
       hobies and projects, but we will see how it goes. Expect to see updates as
-      I look for a new bicycle, rebuild my computer, and chip away at my magnus
-      opus.
+      I look for a new bicycle, mumble in
+      <a href="https://tokipona.org/">toki pona</a>, and chip away at my
+      hubristic projects.
     </p>
   </body>
 </html>
