Whoops, missed some files

--- a/index.html
+++ b/index.html
@@ -8,54 +8,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Fira+Code:wght@300..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href=".css/rose-pine.css" />
-    <link rel="stylesheet" href=".css/fira-code.css" />
-    <link rel="stylesheet" href=".css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/sidebar.css" />
   </head>
   <body>
     <header>Straight from the Horse Head</header>
-    <h1>Welcome to my website.</h1>
-    <div class="side-table">
-      <table>
-        <thead>
-          <th colspan="2">About Me</th>
-        </thead>
-        <tr>
-          <td>Casual Name</td>
-          <td>
-            Lucy/mani lusi/Luke<!--/I will probably answer to any name starting
+    <main>
+      <aside>
+        <table>
+          <thead>
+            <th colspan="2">About Me</th>
+          </thead>
+          <tr>
+            <td>Casual Name</td>
+            <td>
+              Lucy/<wbr />mani&nbsp;lusi/<wbr />Luke<!--/I will probably answer to any name starting
               with an 'L'-->
-          </td>
-        </tr>
-        <tr>
-          <td>Professional Name</td>
-          <td>Luke</td>
-        </tr>
-        <tr>
-          <td>Pronouns</td>
-          <td>Any/All</td>
-        </tr>
-        <tr>
-          <td>Nationality</td>
-          <td>Australian/American dual citizen</td>
-        </tr>
-      </table>
-    </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Professional/In person Name</td>
+            <td>Luke</td>
+          </tr>
+          <tr>
+            <td>Pronouns</td>
+            <td>Any/All</td>
+          </tr>
+          <tr>
+            <td>Nationality</td>
+            <td>Australian/American dual citizen</td>
+          </tr>
+        </table>
+      </aside>
 
-    <p>
-      Hey there, thanks for visiting my site. I am a computer programmer working
-      out of Washington state, primarially working on computer simulations and
-      <strong>basic</strong> machine learning.
-    </p>
-    <p>
-      I am going to try to start using this website as a blog for some of my
-      hobies and projects, but we will see how it goes. Expect to see updates as
-      I look for a new bicycle, mumble in
-      <a href="https://tokipona.org/">toki pona</a>, and chip away at my
-      hubristic projects.
-    </p>
+      <article>
+        <h1>Welcome to my website.</h1>
+
+        <p>
+          Hey there, thanks for visiting my site. I am a computer programmer
+          working out of Washington state, primarially working on computer
+          simulations and
+          <strong>basic</strong> machine learning.
+        </p>
+        <p>
+          I am going to try to start using this website as a blog for some of my
+          hobies and projects, but we will see how it goes. Expect to see
+          updates as I look for a new bicycle, mumble in
+          <a href="https://tokipona.org/">toki pona</a>, and chip away at my
+          hubristic projects.
+        </p>
+      </article>
+    </main>
+    <script
+      src="https://kit.fontawesome.com/75ef340044.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
