--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -60,6 +63,15 @@
           <a href="https://tokipona.org/">toki pona</a>, and chip away at my
           hubristic projects.
         </p>
+        <h2>Posts:</h2>
+        <ul>
+          {% for post in site.posts %}
+          <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            {{ post.excerpt }}
+          </li>
+          {% endfor %}
+        </ul>
       </article>
     </main>
     <script
