Updated website name in pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    {% include html_head.html %}
+    <!--<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Magnussonl's Page</title>
@@ -15,13 +16,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/sidebar.css" />
+    <link rel="stylesheet" href="css/sidebar.css" /> -->
   </head>
   <body>
-    <header>Straight from the Horse Head</header>
+    <header>
+      2 Sugar Cubes
+      <img src="assets/button.webp" alt="2 Sugar Cubes button" />
+    </header>
     <main>
       <aside>
-        <table>
+        <table role="presentation">
           <thead>
             <th colspan="2">About Me</th>
           </thead>
@@ -38,11 +42,11 @@
           </tr>
           <tr>
             <td>Pronouns</td>
-            <td>Any/All</td>
+            <td>Any/All Feminine Prefered Slightly</td>
           </tr>
           <tr>
             <td>Nationality</td>
-            <td>Australian/American dual citizen</td>
+            <td>Australian/American</td>
           </tr>
         </table>
       </aside>
