Fixed image inclusion

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
   <body>
     <div
       style="
-        background-image: url(&quot;assets/splash.webp&quot;);
+        background-image: url(&quot;/assets/splash.webp&quot;);
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
