--- a/resume.html
+++ b/resume.html
@@ -6,16 +6,16 @@ title: Resume
   <table role="presentation">
     <tbody>
       <tr>
+        <td> <i class="fas fa-envelope"></i></td>
         <td><a href="mailto:lukemagnusson@live.com">LukeMagnusson@live.com</a></td>
-        <td><i class="fas fa-envelope"></i></td>
       </tr>
       <tr>
+        <td> <i class="fas fa-phone"></i></td>
         <td><a href="tel:+18015146462">(801) 514 6462</a></td>
-        <td><i class="fas fa-phone"></i></td>
       </tr>
       <tr>
+        <td> <i clas="fas fa-map"></i></td>
         <td>Salt Lake City, Utah.</td>
-        <td><i clas="fas fa-map-pin"></i></td>
       </tr>
       <tr></tr>
     </tbody>
