Fixed typo in class

--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@ title: Resume
         <td><a href="tel:+18015146462">(801) 514 6462</a></td>
       </tr>
       <tr>
-        <td> <i clas="fas fa-map"></i></td>
+        <td> <i class="fas fa-map-pin"></i></td>
         <td>Salt Lake City, Utah.</td>
       </tr>
       <tr></tr>
