Fixed missing class on a button

--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@ title: Resume
       <button class="tag"><abbr title="Java Script">JS</abbr></button>
       <button class="tag">SQL</button>
       <button class="tag">Bash</button>
-      <button><abbr title="Cascading Style Sheets">CSS</abbr></button>
+      <button class="tag"><abbr title="Cascading Style Sheets">CSS</abbr></button>
     </details>
 
     <details>
