feat(index): add links to some isolaed pages

--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
           <a href="https://tokipona.org/">toki pona</a>, and chip away at my
           hubristic projects.
         </p>
+
+        <h2>Things to check out.</h2>
+        <p>
+          There will be a variety of tools on this website. So far there is only
+          <a href="projects/astrograph/">astrograph</a>, a tool for generating
+          star maps for worldbuilders and hobbyists.
+        </p>
+        <p>
+          You can also take a look at the
+          <a href="cool-tools.html"
+            >tools and people who made this website possible</a
+          >
+        </p>
         <h2>Posts:</h2>
 
         {% for cat in site.categories %}
