--- a/projects/astrograph/index.html
+++ b/projects/astrograph/index.html
@@ -6,8 +6,9 @@ title: Astrograph
 <html lang="en">
   <head>
     {% include html_head.html %}
-    <script type="module" src="/js/astro.js" async></script>
+    <script type="module" src="/js/astro.js" defer></script>
     <script src="/js/slideshow.js" async></script>
+    <script src="/js/fileDrop.js" async></script>
   </head>
   <body>
     {% include sidebar.html %}
@@ -17,43 +18,86 @@ title: Astrograph
         You can use this tool to generate starmaps and universes within your
         created worlds.
       </p>
-      <div id="settings">
-        <p>
-          <label for="universe">Input your <b>universe.json</b> here.</label>
-          <input type="text" id="universe" name="universe" value="" />
-        </p>
-        <p>
-          <label for="observatories"
-            >Input your <b>observatories.json</b> here.</label
-          >
-          <input type="text" id="observatories" name="observatories" value="" />
-        </p>
-        <p>
-          <label for="startTime"
-            >Time to start observations at, in hours since the epoch.</label
-          >
-          <input type="number" name="startTime" id="startTime" value="0" />
-        </p>
-        <p>
-          <label for="stepSize">Time between observations, in hours.</label>
-          <input type="number" name="stepSize" id="stepSize" value="1" />
-        </p>
-        <p>
-          <label for="endTime"
-            >Time to stop observing at, in hours. Note: this value is
-            non-inclusive, so will not appear in outputs.</label
-          >
-          <input type="number" name="endTime" id="endTime" value="100" />
-        </p>
-        <p>
-          <button type="submit" onclick="simulate()">Simulate</button>
-        </p>
-      </div>
+      <div class="row">
+        <div id="settings" class="col">
+          <p>
+            <label for="universe">Input your <b>universe.json</b> here.</label>
+            <textarea id="universe" name="universe" value=""></textarea>
+            <input
+              type="file"
+              accept="text/json*"
+              onchange="readFile('universe', this)"
+            />
+          </p>
+          <p>
+            <label for="observatories"
+              >Input your <b>observatories.json</b> here.</label
+            >
+            <textarea
+              id="observatories"
+              name="observatories"
+              value=""
+            ></textarea>
+            <input
+              type="file"
+              accept="text/json*"
+              onchange="readFile('observatories', this)"
+            />
+          </p>
+          <p>
+            <label for="startTime"
+              >Time to start observations at, in hours since the epoch.</label
+            >
+            <input type="number" name="startTime" id="startTime" value="0" />
+          </p>
+          <p>
+            <label for="stepSize">Time between observations, in hours.</label>
+            <input type="number" name="stepSize" id="stepSize" value="1" />
+          </p>
+          <p>
+            <label for="endTime"
+              >Time to stop observing at, in hours. Note: this value is
+              non-inclusive, so will not appear in outputs.</label
+            >
+            <input type="number" name="endTime" id="endTime" value="100" />
+          </p>
+          <p>
+            <button type="submit" onclick="simulate()">Simulate</button>
+          </p>
+        </div>
 
-      <div id="display">
-        <div id="slides"></div>
-        <a id="navButtonPrev" class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <div id="display" class="col" style="position: relative">
+          <div id="slides"></div>
+          <button id="navButtonPrev" class="prev" onclick="plusSlides(-1)">
+            &#10094;
+          </button>
+          <button class="next" onclick="plusSlides(1)">&#10095;</button>
+          <input
+            type="checkbox"
+            name="playing"
+            id="playing"
+            class="visibilityToggle"
+            onclick="showSlides(1)"
+          />
+          <label
+            for="playing"
+            class="hideOnUncheck"
+            style="text-align: center; font-size: 36px"
+          >
+            <pre class="fa-solid fa-play" style="margin-top: 10px">▶️</pre>
+          </label>
+          <label
+            for="playing"
+            class="hideOnCheck"
+            style="text-align: center; font-size: 36px"
+          >
+            <pre class="fa-solid fa-pause" style="margin-top: 10px">⏸️</pre>
+          </label>
+          <p id="noContentToDisplay" style="color: var(--rp-muted)">
+            No conetent to display yet. Observations will appear here once you
+            have set up your parameters.
+          </p>
+        </div>
       </div>
     </article>
   </body>
