fix(astrograph): made empty output text more clear

--- a/projects/astrograph/index.html
+++ b/projects/astrograph/index.html
@@ -95,7 +95,8 @@ title: Astrograph
           </label>
           <p id="noContentToDisplay" style="color: var(--rp-muted)">
             No conetent to display yet. Observations will appear here once you
-            have set up your parameters.
+            have set up your parameters and clicked
+            <b onclick="simulate()">Simulate</b>.
           </p>
         </div>
       </div>
