--- a/projects/astrograph/index.html
+++ b/projects/astrograph/index.html
@@ -9,6 +9,28 @@ title: Astrograph
     <script type="module" src="/js/astro.js" defer></script>
     <script src="/js/slideshow.js" async></script>
     <script src="/js/fileDrop.js" async></script>
+    <style>
+      #settings input:not([type="file"]) {
+        background-color: var(--rp-overlay);
+        box-shadow:
+          inset 2px 2px 4px #1c1a2b,
+          inset -2px -2px 4px #302c49;
+        border-color: var(--rp-muted);
+        width: 95%;
+        color: var(--rp-text);
+      }
+
+      #settings textarea {
+        height: 20ex;
+        background-color: var(--rp-overlay);
+        box-shadow:
+          inset 5px 5px 10px #1c1a2b,
+          inset -5px -5px 10px #302c49;
+        border-color: var(--rp-muted);
+        width: 95%;
+        color: var(--rp-text);
+      }
+    </style>
   </head>
   <body>
     {% include sidebar.html %}
@@ -18,10 +40,13 @@ title: Astrograph
         You can use this tool to generate starmaps and universes within your
         created worlds.
       </p>
-      <div class="row">
-        <div id="settings" class="col">
+
+      <main class="row">
+        <div id="settings" class="col card" style="padding: 10px">
           <p>
-            <label for="universe">Input your <b>universe.json</b> here.</label>
+            <label for="universe"
+              >Input your <b>universe.json</b> here (or select a file).</label
+            >
             <textarea id="universe" name="universe" value=""></textarea>
             <input
               type="file"
@@ -30,9 +55,9 @@ title: Astrograph
             />
           </p>
           <p>
-            <label for="observatories"
-              >Input your <b>observatories.json</b> here.</label
-            >
+            <label for="observatories">
+              Input your <b>observatories.json</b> here (or select a file).
+            </label>
             <textarea
               id="observatories"
               name="observatories"
@@ -55,17 +80,16 @@ title: Astrograph
             <input type="number" name="stepSize" id="stepSize" value="1" />
           </p>
           <p>
-            <label for="endTime"
-              >Time to stop observing at, in hours. Note: this value is
-              non-inclusive, so will not appear in outputs.</label
-            >
+            <label for="endTime">
+              Time to stop observing at, in hours. Note: this value is
+              non-inclusive, so will not appear in outputs.
+            </label>
             <input type="number" name="endTime" id="endTime" value="100" />
           </p>
           <p>
             <button type="submit" onclick="simulate()">Simulate</button>
           </p>
         </div>
-
         <div id="display" class="col" style="position: relative">
           <div id="slides"></div>
           <button id="navButtonPrev" class="prev" onclick="plusSlides(-1)">
@@ -99,7 +123,7 @@ title: Astrograph
             <b onclick="simulate()">Simulate</b>.
           </p>
         </div>
-      </div>
+      </main>
     </article>
   </body>
 </html>
