--- a/projects/astrograph/_generate.html
+++ b/projects/astrograph/_generate.html
@@ -41,7 +41,7 @@
     <button
       type="button"
       class="hideOnUncheck"
-      onclick="download(generateOutputPretty)"
+      onclick="download('generateOutputPretty')"
     >
       Download
     </button>
@@ -210,7 +210,7 @@
     <button
       type="button"
       class="hideOnCheck"
-      onclick="download(generateOutputMinimized)"
+      onclick="download('generateOutputMinimized')"
     >
       Download
     </button>
